--- a/style.css
+++ b/style.css
@@ -70,7 +70,9 @@ background-image: -o-linear-gradient(left, #ccc, #333, #ccc);
 }
 
 #map {
-    height: 100%;
+    height: 94%;
+	margin:0px;
+	padding:0px;
 }
 
 html, body {
